--- a/styles/catalog.module.css
+++ b/styles/catalog.module.css
@@ -1,7 +1,17 @@
 .container{
  display: grid;
+ grid-template-columns: 300px 1fr;
 }
 .sidebar{
-    width: 350px;
+    width: 300px;
     height: 100vh;
+    border-right: solid 3px #009867;
+    background-color: #f8f8f8;
+}
+.list-wrapper{
+    
+}
+.title{
+    font-size: 2.1em;
+    margin: 30px 20px;
 }
