--- a/styles/catalog.module.css
+++ b/styles/catalog.module.css
@@ -1,17 +1,34 @@
-.container{
- display: grid;
- grid-template-columns: 300px 1fr;
+.container {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-areas:
+    'sidebar .'
+    'sidebar main';
 }
-.sidebar{
-    width: 300px;
-    height: 100vh;
-    border-right: solid 3px #009867;
-    background-color: #f8f8f8;
+.sidebar:hover {
+  transition: width 0.5s ease-in;
+  width: 0;
 }
-.list-wrapper{
-    
+
+.sidebar {
+  transition: width 0.5s ease-out;
+  grid-area: sidebar;
+  display: flex;
+  justify-content: flex-end;
+  width: 300px;
+  border-right: solid 3px #009867;
+  background-color: #f8f8f8;
 }
-.title{
-    font-size: 2.1em;
-    margin: 30px 20px;
+.main {
+  grid-area: main;
+  overflow-y: scroll;
+  border-collapse: collapse;
+}
+.list-wrapper {
+}
+.title {
+  height: fit-content;
+  font-size: 2.1em;
+  padding: 30px 40% 0 0;
 }
