--- a/styles/catalog.module.css
+++ b/styles/catalog.module.css
@@ -2,6 +2,7 @@
   height: 100vh;
   display: grid;
   grid-template-columns: auto 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-areas:
     'sidebar .'
     'sidebar main';
