--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,52 @@ button {
   box-sizing: border-box;
   font-family: Nova Flat, sans-serif;
 }
+.animated{
+  display: grid;
+  -webkit-user-select: none;
+  user-select: none;
+}
+.animated > *{
+  grid-column: 1/-1;
+  grid-row: 1/-1;
+  width: max-content;
+  font-size: 7em;
+}
+.animated :nth-child(1) {
+  color: transparent;
+  -webkit-text-stroke: 2px #009867;
+}
+.animated :nth-child(2) {
+  color: #009867;
+  animation: animate 4s ease-in-out infinite;
+}
+/* water animation by Álvaro on CodePen*/
+@keyframes animate {
+  0%,
+  100% {
+    clip-path: polygon(
+      0% 45%,
+      16% 44%,
+      33% 50%,
+      54% 60%,
+      70% 61%,
+      84% 59%,
+      100% 52%,
+      100% 100%,
+      0% 100%
+    );
+  }
+  50% {
+    clip-path: polygon(
+      0% 60%,
+      15% 65%,
+      34% 66%,
+      51% 62%,
+      67% 50%,
+      84% 45%,
+      100% 46%,
+      100% 100%,
+      0% 100%
+    );
+  }
+}
