--- a/styles/catalog.module.css
+++ b/styles/catalog.module.css
@@ -11,22 +11,21 @@
   transition: width 0.5s ease-in;
   width: 0;
 }
-
 .sidebar {
   transition: width 0.5s ease-out;
   grid-area: sidebar;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  justify-content: flex-start;
   width: 300px;
   border-right: solid 3px #009867;
   background-color: #f8f8f8;
+  align-items: flex-end;
 }
 .main {
   grid-area: main;
   overflow-y: scroll;
   border-collapse: collapse;
-}
-.list-wrapper {
 }
 .title {
   height: fit-content;
