--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -19,3 +19,12 @@
 .container:nth-child(even) .ant-card-meta > div > div:last-child{
     color: rgba(255, 255, 255, 0.65);
 }
+.cart{
+  border: 2px solid #009867;
+  transition: all 150ms ease-in-out;
+}
+.cart:hover{
+  cursor: pointer;
+  transform: translateY(-3px);
+  box-shadow: grey 0 5px 10px;
+}
