--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -6,7 +6,7 @@
   height: 60px;
 }
 .data-wrapper {
-  overflow-x: scroll;
+  overflow-x: hidden;
   align-items: center;
   display: flex;
   gap: 30px;
